...
            correct = "✏ Corriger",
            correctorName = "Nom du correcteur",
            proposedFrench = "Français proposé",
            proposedSaamaka = "Saamaka proposé",
            commentExplanation = "Commentaire / explication",
            saveCorrection = "Enregistrer la correction",
            testerSpeakerName = "Nom du testeur / locuteur",
            continueText = "Continuer",
            quit = "Quitter",
            cancel = "Annuler",
            reportDeletion = "Signaler pour suppression",
            deletionProposed = "Suppression proposée",
            cancelDeletionProposal = "Annuler le signalement",
            deletionReasonTitle = "Motif du signalement",
...
