...
            WordByWordCard(emphasized = true)
            GrammaticalCard(emphasized = false)
        }
    }
}

const val QUICK_SEARCH_TEST_TAG = "quick_search_field"
const val SEARCH_RESULT_TEST_TAG = "search_result"

@Composable
fun SearchScreen(
    total: Int,
    officiallyValidated: Int,
...
